--- a/package.json
+++ b/package.json
@@ -11,15 +11,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "react-google-recaptcha": "^2.1.0",
-<<<<<<< HEAD
-    "react-google-recaptcha-v3": "^1.9.7",
-=======
->>>>>>> b647053d682fd3df90b0de84a5b8700d20b71d05
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
     "react-scroll": "^1.8.4",
+    "sass": "^1.49.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -45,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.2.2"
   }
 }
