--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^3.0.1",
     "react-scroll": "^1.8.4",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
