--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.25.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.4",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack": "^4.29.6"
   },
   "scripts": {
     "start": "react-scripts start",
