--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.4",
+    "react-table": "^7.7.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
