--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-yup": "^1.23.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
+    "validator": "^13.7.0",
     "web-vitals": "^1.1.2",
     "webpack": "^4.29.6",
     "yup": "^0.32.11"
