--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.3.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.25.0",
     "react-scripts": "^5.0.0",
